--- a/src/app/home/signin/signin.component.html
+++ b/src/app/home/signin/signin.component.html
@@ -5,13 +5,13 @@
     <div class="form-group">
         <input #userNameInput formControlName="userName" class="form-control" placeholder="user name" autofocus>
 
-        <ap-vmessage *ngIf="loginForm.get('userName').errors?.required" text="User name is required!"></ap-vmessage>
+        <ap-vmessage *ngIf="loginForm.get('userName').errors?.required && loginForm.get('userName').touched" text="User name is required!"></ap-vmessage>
     </div>
 
     <div class="form-group">
         <input formControlName="password" type="password" class="form-control" placeholder="password">
 
-        <ap-vmessage *ngIf="loginForm.get('password').errors?.required" text="Password is required!"></ap-vmessage>
+        <ap-vmessage *ngIf="loginForm.get('password').errors?.required &&loginForm.get('password').touched" text="Password is required!"></ap-vmessage>
     </div>
 
     <button [disabled]="loginForm.invalid" type="submit" class="btn btn-primary btn-block">
@@ -20,4 +20,4 @@
 
 </form>
 
-<p>Not a user?<a>Register now</a></p>
+<p>Not a user? <a [routerLink]="['signup']">Register now</a></p>
