--- a/src/app/home/signup/signup.component.html
+++ b/src/app/home/signup/signup.component.html
@@ -2,21 +2,21 @@
 
 <form [formGroup]="signupForm" class="form mt-4" (submit)="signup()">
     <div class="form-group">
-        <input formControlName="email" placeholder="email" class="form-control" autofocus>
-        <ap-vmessage *ngIf="signupForm.get('email').errors?.required" text="Email is required!"></ap-vmessage>
+        <input #emailInput formControlName="email" placeholder="email" class="form-control" autofocus>
+        <ap-vmessage *ngIf="signupForm.get('email').errors?.required && signupForm.get('email').touched" text="Email is required!"></ap-vmessage>
         <ap-vmessage *ngIf="signupForm.get('email').errors?.email" text="Invalid e-mail"></ap-vmessage>
     </div>
 
     <div class="form-group">
         <input formControlName="fullName" placeholder="full name" class="form-control">
-        <ap-vmessage *ngIf="signupForm.get('fullName').errors?.required" text="Full name is required!"></ap-vmessage>
+        <ap-vmessage *ngIf="signupForm.get('fullName').errors?.required && signupForm.get('fullName').touched" text="Full name is required!"></ap-vmessage>
         <ap-vmessage *ngIf="signupForm.get('fullName').errors?.minlength" text="Minimum length is 2"></ap-vmessage>
         <ap-vmessage *ngIf="signupForm.get('fullName').errors?.maxlength" text="Maximum length is 40"></ap-vmessage>
     </div>
 
     <div class="form-group">
         <input formControlName="userName" placeholder="user name" class="form-control">
-        <ap-vmessage *ngIf="signupForm.get('userName').errors?.required" text="userName is required!"></ap-vmessage>
+        <ap-vmessage *ngIf="signupForm.get('userName').errors?.required && signupForm.get('userName').touched" text="userName is required!"></ap-vmessage>
         <ap-vmessage *ngIf="signupForm.get('userName').errors?.minlength" text="Minimum length is 2"></ap-vmessage>
         <ap-vmessage *ngIf="signupForm.get('userName').errors?.maxlength" text="Maximum length is 30"></ap-vmessage>
         <ap-vmessage *ngIf="signupForm.get('userName').errors?.lowerCase" text="Must be lowercase"></ap-vmessage>
@@ -27,12 +27,12 @@
 
     <div class="form-group">
         <input formControlName="password" type="password" placeholder="password" class="form-control">
-        <ap-vmessage *ngIf="signupForm.get('password').errors?.required" text="password is required!"></ap-vmessage>
+        <ap-vmessage *ngIf="signupForm.get('password').errors?.required && signupForm.get('password').touched" text="password is required!"></ap-vmessage>
         <ap-vmessage *ngIf="signupForm.get('password').errors?.minlength" text="Minimum length is 8"></ap-vmessage>
         <ap-vmessage *ngIf="signupForm.get('password').errors?.maxlength" text="Maximum length is 14"></ap-vmessage>
     </div>
 
     <button [disabled]="signupForm.invalid || signupForm.pending" class="btn btn-primary btn-block">Register</button>
 
-    <p>Already a user?<a [routerLink]="['']">Sign In!</a></p>
+    <p>Already a user? <a [routerLink]="['']">Sign In!</a></p>
 </form>
