--- a/src/app/photos/photo-form/photo-form.component.html
+++ b/src/app/photos/photo-form/photo-form.component.html
@@ -1,3 +1,42 @@
-<p>
-  photo-form works!
-</p>
+<div class="container">
+  <form [formGroup]="photoForm" class="row" (submit)="upload()">
+    <div class="col-md-6 text-center">
+      <div class="form-group" *ngIf="!preview; else previewImage">
+
+        <button immediateClick type="button" (click)="fileInput.click()" class="btn btn-primary">
+          <i class="fa fa-image fa-4x align-middle"></i>
+        </button>
+        <input #fileInput hidden type="file" formControlName="file" accept="image/*"
+          (change)="handleFile($event.target.files[0])">
+        <ap-vmessage *ngIf="photoForm.get('file').errors?.required" text="Please, select a photo"></ap-vmessage>
+      </div>
+    </div>
+
+    <div class="col-md-6">
+      <div class="form-group">
+        <textarea class="form-control form-control-sm" formControlName="description"
+          placeholder="photo description"></textarea>
+        <ap-vmessage *ngIf="photoForm.get('description').errors?.maxlength" text="Max length is 300"></ap-vmessage>
+      </div>
+
+      <ng-template #previewImage>
+        <div class="text-center">
+          <ap-photo [url]="preview" title="preview"></ap-photo>
+        </div>
+      </ng-template>
+
+      <div class="form-group">
+        <label class="text-muted">
+          Allow comments
+          <input formControlName="allowComments" type="checkbox">
+        </label>
+      </div>
+
+      <button [disabled]="photoForm.invalid" type="submit" class="btn btn-primary btn-block">
+        Upload
+      </button>
+
+      <a class="btn btn-secondary btn-block">Cancel</a>
+    </div>
+  </form>
+</div>
