--- a/src/app/home/signup/signup.component.html
+++ b/src/app/home/signup/signup.component.html
@@ -1,25 +1,25 @@
 <h4 class="text-center"> Register to embrace a new world!</h4>
 
-<form [formGroup]="signupForm" class="form mt-4" (submit)="signup()">
+<form #form="ngForm" [formGroup]="signupForm" class="form mt-4" (submit)="signup()">
     <div class="form-group">
         <input #emailInput formControlName="email" placeholder="email" class="form-control" autofocus>
-        <ap-vmessage *ngIf="signupForm.get('email').errors?.required && signupForm.get('email').touched" text="Email is required!"></ap-vmessage>
-        <ap-vmessage *ngIf="signupForm.get('email').errors?.email" text="Invalid e-mail"></ap-vmessage>
+        <ap-vmessage *ngIf="signupForm.get('email').errors?.required && ((form.submitted || signupForm.get('email').touched) || signupForm.get('email').touched)" text="Email is required!"></ap-vmessage>
+        <ap-vmessage *ngIf="signupForm.get('email').errors?.email && (form.submitted || signupForm.get('email').touched)" text="Invalid e-mail"></ap-vmessage>
     </div>
 
     <div class="form-group">
         <input formControlName="fullName" placeholder="full name" class="form-control">
-        <ap-vmessage *ngIf="signupForm.get('fullName').errors?.required && signupForm.get('fullName').touched" text="Full name is required!"></ap-vmessage>
-        <ap-vmessage *ngIf="signupForm.get('fullName').errors?.minlength" text="Minimum length is 2"></ap-vmessage>
-        <ap-vmessage *ngIf="signupForm.get('fullName').errors?.maxlength" text="Maximum length is 40"></ap-vmessage>
+        <ap-vmessage *ngIf="signupForm.get('fullName').errors?.required && (form.submitted || signupForm.get('fullName').touched)" text="Full name is required!"></ap-vmessage>
+        <ap-vmessage *ngIf="signupForm.get('fullName').errors?.minlength && (form.submitted || signupForm.get('fullName').touched)" text="Minimum length is 2"></ap-vmessage>
+        <ap-vmessage *ngIf="signupForm.get('fullName').errors?.maxlength && (form.submitted || signupForm.get('fullName').touched)" text="Maximum length is 40"></ap-vmessage>
     </div>
 
     <div class="form-group">
         <input formControlName="userName" placeholder="user name" class="form-control">
-        <ap-vmessage *ngIf="signupForm.get('userName').errors?.required && signupForm.get('userName').touched" text="userName is required!"></ap-vmessage>
-        <ap-vmessage *ngIf="signupForm.get('userName').errors?.minlength" text="Minimum length is 2"></ap-vmessage>
-        <ap-vmessage *ngIf="signupForm.get('userName').errors?.maxlength" text="Maximum length is 30"></ap-vmessage>
-        <ap-vmessage *ngIf="signupForm.get('userName').errors?.lowerCase" text="Must be lowercase"></ap-vmessage>
+        <ap-vmessage *ngIf="signupForm.get('userName').errors?.required && (form.submitted || signupForm.get('userName').touched)" text="userName is required!"></ap-vmessage>
+        <ap-vmessage *ngIf="signupForm.get('userName').errors?.minlength && (form.submitted || signupForm.get('userName').touched)" text="Minimum length is 2"></ap-vmessage>
+        <ap-vmessage *ngIf="signupForm.get('userName').errors?.maxlength && (form.submitted || signupForm.get('userName').touched)" text="Maximum length is 30"></ap-vmessage>
+        <ap-vmessage *ngIf="signupForm.get('userName').errors?.lowerCase && (form.submitted || signupForm.get('userName').touched)" text="Must be lowercase"></ap-vmessage>
         <ap-vmessage *ngIf="signupForm.get('userName').errors?.userNameTaken" text="Username already taken" >
         </ap-vmessage>
         <small *ngIf="signupForm.get('userName').valid" class="text-success">User available</small>
@@ -27,12 +27,14 @@
 
     <div class="form-group">
         <input formControlName="password" type="password" placeholder="password" class="form-control">
-        <ap-vmessage *ngIf="signupForm.get('password').errors?.required && signupForm.get('password').touched" text="password is required!"></ap-vmessage>
-        <ap-vmessage *ngIf="signupForm.get('password').errors?.minlength" text="Minimum length is 8"></ap-vmessage>
-        <ap-vmessage *ngIf="signupForm.get('password').errors?.maxlength" text="Maximum length is 14"></ap-vmessage>
+        <ap-vmessage *ngIf="signupForm.get('password').errors?.required && (form.submitted || signupForm.get('password').touched)" text="password is required!"></ap-vmessage>
+        <ap-vmessage *ngIf="signupForm.get('password').errors?.minlength && (form.submitted || signupForm.get('password').touched)" text="Minimum length is 8"></ap-vmessage>
+        <ap-vmessage *ngIf="signupForm.get('password').errors?.maxlength && (form.submitted || signupForm.get('password').touched)" text="Maximum length is 14"></ap-vmessage>
+
+        <ap-vmessage *ngIf="signupForm.errors?.userNamePassword && form.submitted" text="Username and password must be diffent"></ap-vmessage>
     </div>
 
-    <button [disabled]="signupForm.invalid || signupForm.pending" class="btn btn-primary btn-block">Register</button>
+    <button class="btn btn-primary btn-block">Register</button>
 
     <p>Already a user? <a [routerLink]="['']">Sign In!</a></p>
 </form>
